second commit, quite a few changes

--- a/Fish_people_quest.html
+++ b/Fish_people_quest.html
@@ -37,11 +37,10 @@
 			
 		
 			
-			vocab_list{
+			.vocab_list {
 				margin-left: 0px;
 				margin-right: 0px;
-				width: 100vw;
-				float: none;
+				margin-top: 0px;
 				display: inline;
 			
 			}
@@ -64,7 +63,7 @@
 			
 			}
 			
-			}
+			
 		</style>
 	
 	</head>
