--- a/outside-Fish_people_quest.html
+++ b/outside-Fish_people_quest.html
@@ -33,7 +33,7 @@
 	</head>
 	<body>
 		<audio controls>
-			<source src="chill2.wav" type="audio/mpeg">
+			<source src="chill2_edit2.wav" type="audio/mpeg">
 		 </audio controls>
 
 		<div class="dialogue"><h2>Going on a quest, eh?</h2></div>
