--- a/outside.html
+++ b/outside.html
@@ -16,10 +16,12 @@
 	
 	</head>
 	<body>
+		<audio controls>
+			<source src="chill2_edit.wav" type="audio/mpeg">
+		</audio controls>
 	
-	<div class="dialogue"><h2>Silly human</h2></div>
-		<img src="Fairy.jpg" height="500" width="400" class="centerimage"/>
-	
+		<div class="dialogue"><h2>Silly human</h2></div>
+			<img src="Fairy.jpg" height="500" width="400" class="centerimage"/>	
 		<div class = "continue"><h3><a href = "travelling.html">to quest<a/></h3></div>
 	</body>
 </html>
